# Devboard

./: .gitignore  BUILD.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  README.txt  TECH_STACK.md  electron-builder.yml  feature-ideas.md  index.html  instructions - adding documents.rtf  landing.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.claude/: settings.local.json
.github/workflows/: tauri-build.yml
ClaudeDesign - Devboard improvements/: DEVBOARD_HANDOFF.md  Devboard Transitions v2.html  app-v2.jsx  canvas.jsx  data-v2.jsx  doc-editor.jsx  icons.jsx  quick-switcher.jsx  sidebar-v2.jsx  stack-view.jsx  styles-v2.css  styles.css  topbar-v2.jsx
demo-workplace/: Chunky.devboard.json  workspace.json
demo-workplace/documents/: project_overview.md  sprint_notes.md  tech_stack.md
demo-workplace/notes/: sdfsdf.md  (+5 more)
devboard-itchio/: README.txt  index.html
docs/: app.html  design-system.html  download.html  index.html  landing.css  manual.html  self-hosting.html  site.css
electron/: main.cjs
marketing/: README.md  kofi-page-copy.md  long-2min-deepdive.md  medium-60s-demo.md  short-15s-teaser.md  short-30s-daily.md  short-30s-writers.md  text-posts.md
memory/: MEMORY.md  project_ux_improvements.md
scripts/: generate-updater-json.mjs
src/: App.tsx  index.css  theme.ts  vite-env.d.ts
src-tauri/: Cargo.toml  io.devboard.app.yml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
supabase/: workspace-sync-history-and-locations.sql  workspace-sync-rls-fix.sql
(+91 files in other folders)
