[package]
name = "devboard"
version = "0.4.2"
edition = "2021"

[lib]
name = "devboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
